comments overflow problem solved

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -291,3 +291,10 @@ h1 a{
     justify-content: center;
     font-size: 28pt;
 }
+
+#scroll{
+    background-color: rgba(0, 0, 0, 0.397);
+    max-height: 450px;
+    overflow-y: scroll;
+
+}
